# computer-vision-proejct

./: .gitignore
model-training/: data.yaml  evaluation.py  folder-prediction.py  generate-charts.py  main.py  prepare-dataset.py  pyproject.toml  training.py
model-training/runs/detect/WasteDetection/test_results/: map50  results.txt
model-training/runs/detect/WasteDetection/yolo26_waste_run_1/: args.yaml  results.csv
model-training/runs/detect/WasteDetection/yolo26_waste_run_2/: args.yaml  results.csv
model-training/runs/detect/WasteDetection/yolo26_waste_run_3/: args.yaml  results.csv
model-use/: pyproject.toml  video.py
